RESOLVED FIXED303395
[blocks-in-inline] Block lines should not affect inline box geometry
https://bugs.webkit.org/show_bug.cgi?id=303395
Summary [blocks-in-inline] Block lines should not affect inline box geometry
Antti Koivisto
Reported 2025-12-02 08:31:34 PST
affects fast/selectors/hover-descendant-shadow-tree.html
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-02 08:31:45 PST
Antti Koivisto
Comment 2 2025-12-02 08:46:08 PST
EWS
Comment 3 2025-12-02 10:34:29 PST
Committed 303771@main (4f8c6605e4a0): <https://commits.webkit.org/303771@main> Reviewed commits have been landed. Closing PR #54706 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.