[blocks-in-inline] Block lines should not affect inline box geometry https://bugs.webkit.org/show_bug.cgi?id=303395 rdar://165697930

Reviewed by Alan Baradlay.

Test: fast/inline/blocks-in-inline-offsetwidth.html
* LayoutTests/fast/inline/blocks-in-inline-offsetwidth-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-offsetwidth.html: Added.
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processNonBidiContent):

Don't stretch for block lines.

Canonical link: https://commits.webkit.org/303771@main